--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cypress:open": "cypress open",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
-    "serialize": "node -e 'require(\"./cypress/utils/testCoverage.js\").testCoverage()'"
+    "serialize": "node -e 'require(\"./cypress/utils/testCoverage.js\").testCoverage()'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "coverageReporters": [
@@ -43,5 +45,8 @@
   "directories": {
     "test": "tests"
   },
-  "keywords": []
+  "keywords": [],
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
